--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
   #welcome {
       text-align: center;
-      color: darkorange;
+      color: whitesmoke;
       margin-bottom: 20px;
   }
 
@@ -128,7 +128,7 @@ h1 {
     font-family: 'Rokkitt', serif;
 }
 
-#images {
+#image {
     display: block;
     margin-left: auto;
     margin-right: auto;
